fixed overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body, html {
     font-family: Verdana, Geneva, sans-serif;
     font-size: 62.5%;
     line-height: 2rem;
+    overflow-x: hidden;
 }
 
 p {
